--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "webpack": "^5.73.0",
     "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0",
